--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
         <image src="image/image 2.png" class="logo">
         <ul class="menu">
-            <li><a href="home.html"> Home</li></a>
+            <li><a href="index.html"> Home</li></a>
             <li> <a href="Elephantom details.html">Elephant</li></a>
         </ul>
     </div>
