--- a/Elephantom details.html
+++ b/Elephantom details.html
@@ -12,7 +12,7 @@
     <div class="sidebar">
         <image src="image/image 2.png" class="logo">
         <ul>
-         <li><a href="home.html"> Home</li></a>
+         <li><a href="index.html"> Home</li></a>
             <li> <a href="#">Elephant</li></a>
         </ul>
     </div>
