--- a/Elephantom details.html
+++ b/Elephantom details.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="topnav">
-        <a href="#">Acumen Digital Interview Task / Elephantom</a>
+        <a href="#">Acumen Digital Interview Task / Elephantom >  Elephant</a>
         </div>
 
     <section >
@@ -26,7 +26,7 @@
         <image src="image/elephant.jpg"></image>
     </section>
      <div class=para2>
-    <h2>Tuffi <font-size="18px">Female</font-size></h2>
+    <h2>Tuffi <span class="smpara">Female</span></h2>
     <hr>
     <p>A female circus elephant that became famous in Germany during 1950 when she accidentally fell into the River Wupper, and survived.</p>
 </div>    
