--- a/Elephantom details.html
+++ b/Elephantom details.html
@@ -5,6 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="Style.css">
+        <style>
+            li.active a { background:#B9B9FF;
+            color:white;}
+
+            .image{ position:static;
+                max-width: auto;
+                width: 500px; 
+            }
+            .para2{width:auto;
+                margin-left:390px;}
+        </style>
     </head>
     
     <body class="detail">
@@ -13,7 +24,7 @@
         <image src="image/image 2.png" class="logo">
         <ul>
          <li><a href="index.html"> Home</li></a>
-            <li> <a href="#">Elephant</li></a>
+            <li class="active"> <a href="#">Elephant</li></a>
         </ul>
     </div>
 
@@ -21,7 +32,7 @@
         <a href="#">Acumen Digital Interview Task / Elephantom >  Elephant</a>
         </div>
 
-    <section >
+    <section class="image" >
         
         <image src="image/elephant.jpg"></image>
     </section>
