--- a/Elephantom details.html
+++ b/Elephantom details.html
@@ -9,9 +9,12 @@
             li.active a { background:#B9B9FF;
             color:white;}
 
-            .image{ position:static;
-                max-width: auto;
-                width: 500px; 
+            .image{ 
+                width:auto;
+                
+                margin-left: 385px;
+        margin-right: auto;
+                
             }
             .para2{width:auto;
                 margin-left:390px;}
@@ -21,7 +24,7 @@
     <body class="detail">
 
     <div class="sidebar">
-        <image src="image/image 2.png" class="logo">
+        <img src="image/image 2.png" class="logo">
         <ul>
          <li><a href="index.html"> Home</li></a>
             <li class="active"> <a href="#">Elephant</li></a>
@@ -29,7 +32,7 @@
     </div>
 
     <div class="topnav">
-        <a href="#">Acumen Digital Interview Task / Elephantom >  Elephant</a>
+      <header="elephant"> Acumen Digital Interview Task / Elephantom >  Elephant</header>
         </div>
 
     <section class="image" >
